<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dyne</string>
    <string name="user_name">User Name</string>
    <string name="serves">Serves</string>
    <string name="cook_time">Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="ingredient_placeholder">Error</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_template_drawer">TemplateDrawer</string>
    <string name="recipe_name_template">Recipe_Name</string>
    <string name="recipe_ingredient_name">Ingredient_Name</string>
    <string name="step">Step #</string>
    <string name="addToList">Add To List</string>
    <string name="step_number">#</string>
    <string name="method_text">Method Text Here</string>
    <string name="carbs">Carbohydrates:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="sugar">Sugar:</string>
    <string name="calories">Calories per serving:</string>
    <string name="share_message">Look what i prepared using a Dyne app recipe.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="facebook_button_text">Share a picture of your meal</string>
    <string name="imagedesc_facebook">facebook logo</string>
    <string name="search_title">Search for a recipe</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="drinks">Drinks</string>
    <string name="dessert">Desserts</string>
    <string name="main_course">Main Courses</string>
    <string name="starter">Starters</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="home">Home</string>
    <string name="all_recipes">All Recipes</string>
    <string name="eating_out">Eating Out</string>
    <string name="shopping_list">Shopping List</string>
    <string name="essentials_guide">Essentials Guide</string>
    <string name="glossary">Glossary</string>
    <string name="settings">Settings</string>
    <string name="about_title">About</string>
    <string name="vegetarian_toggle">Vegetarian Recipes Only</string>
    <string name="vegan_toggle">Vegan Recipes Only</string>
    <string name="gluten_free_toggle">Gluten Free Recipes Only</string>
    <string name="about_1">Dyne was created by, and is designed for, students based in Newcastle.</string>
    <string name="about_2">The wide range of informative recipes, tutorials and an essentials guide will quickly teach you advanced cooking skills by explaining all of the main techniques of how to prepare a meal.</string>
    <string name="about_3">Thanks to our knowledge of the local area, the selection of restaurants in the eating out section were chosen to precisely fit with the student budget. </string>
    <string name="about_4">Don’t forget to use Dyne’s Facebook integration to share pictures of your meals with your friends!</string>
    <string name="about_5">All recipes used in the current version of this application were sourced from BBC Good Food.</string>
    <string name="about_6">If you have any questions, do not hesitate to contact us via email: csc2-team18@ncl.ac.uk</string>
    <string name="favourite_recipe">Favourite this recipe</string>
    <string name="search_hint">Search for a recipe&#8230;</string>

</resources>