<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <include layout="@layout/toolbar" />

        <!-- Main Body -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    >

                    <!-- Pull image from database -->
                    <ImageView
                        android:id="@+id/recipeImage"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="@dimen/tile_margin"
                        android:background="@drawable/potroast1"
                         />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/tile_margin"
                    android:layout_marginTop="@dimen/tile_margin"
                    >

                        <!-- Update @string/serves with data from database -->
                        <TextView
                            android:id="@+id/serves"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/serves"
                            android:textColor="#000000"
                            />

                        <!-- Update @string/cook_time with data from database -->
                        <TextView
                            android:id="@+id/cookTime"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/cook_time"
                            android:textColor="#000000"
                            />

                        <!-- Update @string/difficulty with data from database -->
                        <TextView
                            android:id="@+id/difficulty"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/difficulty"
                            android:textColor="#000000"
                            />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/ingredients_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Use Java to import ingredients as needed by recipe -->



                </GridLayout>

            </LinearLayout>

        </ScrollView>
    </RelativeLayout>

    <!-- Navigation Drawer -->
    <include layout="@layout/drawer" />

</android.support.v4.widget.DrawerLayout>
